--- a/Frotend/package.json
+++ b/Frotend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
